# Communication-Enhanced-Path-Adaptation

./: .gitignore  CMakeLists.txt  package.xml
config/: global_planner.yaml  local_planner.yaml
include/arc_hybrid_planner/: hybrid_planning_interface.hpp
launch/: arc_planning_interface.launch.py  fraunhofer_mod.launch.py  hybrid_core_ind_nodes.launch.py  hybrid_plan_interface.launch.py  hybrid_planning_core.launch.py  moveit_core.launch.py  moveit_hybrid_planner.launch.py  panda_demo.launch.py  ur_moveit.launch.py  ur_moveit_hybrid_planner.launch.py  ur_moveit_std_planner.launch.py
src/: hybrid_planning_demo_node.cpp  hybrid_planning_interface.cpp  main.cpp
src/arc_bringup/: CMakeLists.txt  package.xml
src/arc_bringup/config/: ur_controller.yaml
src/arc_bringup/launch/: hybrid_planning_demo.launch.py  ur_control.launch.py
src/arc_bringup/src/: keyboard_input.cpp
src/arc_hybrid_planner/: package.xml
src/arc_hybrid_planner/config/: global_planner.yaml  hybrid_kinematics.yaml  local_planner.yaml
src/arc_hybrid_planner/launch/: arc_planning_interface.launch.py  hybrid_planner.launch.py  moveit_hybrid_planner.launch.py
src/arc_hybrid_planner/src/: custom_planner.cpp  hybrid_planning_interface.cpp  main.cpp
src/arc_hybrid_planner/test/: lookup_transform.py  loop_move.py  simple_subscriber.py  test_target_service.py
src/arc_interfaces/: CMakeLists.txt  package.xml
src/arc_interfaces/msg/: ArcHPComm.msg  ArcHumanPose.msg  ArcHumanPosePred.msg
src/arc_interfaces/srv/: ArcHumanPoseInit.srv  ArcHybridPlannerMode.srv
src/arc_moveit_config/config/: kinematics.yaml
src/arc_moveit_config/rviz/: view_robot.rviz
src/arc_robot_description/launch/: view_arc_robot.launch.py  view_demo.launch.py  view_env.launch.py
src/arc_robot_description/models/assemblytable/: model.config  model.sdf
src/arc_robot_description/models/cobottable/: cobottable.blend  model.config  model.sdf
src/arc_robot_description/models/robot_plate/: model.config  model.sdf
src/arc_robot_description/rviz/: view_env.rviz
src/arc_robot_description/urdf/: assembly_table.urdf.xacro  initial_positions.yaml  table_common.urdf.xacro  test.urdf  ur_moveit.exmaple.xacro
src/hybrid_planning/hybrid_planning_manager/hybrid_planning_manager_component/src/: hybrid_planning_manager.cpp
src/hybrid_planning/hybrid_planning_manager/planner_logic_plugins/src/: replan_invalidated_trajectory.cpp  single_plan_execution.cpp
test/: lookup_transform.py  test_target_service.py
