<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arc_hybrid_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bhalu311@gmail.com">balachandra</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>pluginlib</depend>
  <depend>moveit_hybrid_planning</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit2_tutorials</depend>
  <depend>arc_interfaces</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
